2012-11-21  Hani Benhabiles <kroosec@gmail.com>

	* src/html/gsad.xsl (sync_scap_response): Added SCAP Synchronization
	template for response indicator.

2012-11-21  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (get_tasks): Match create_task_response, for cloning.

2012-11-21  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/gsad.xsl (html-task-table): Widen actions column.
	(task): Make start icon margins consistent.  Introduce standard icons.

2012-11-21  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/gsad.xsl (contents.html): Add New Task.  Rename Reports to
	Task Details and Reports.
	(reports.html): Remove.  Now task_details.html.
	(task_details.html): New template.  Was reports.html.  Update jump
	link.  Rename header.

2012-11-21  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (init_validator, exec_omp_get): Add export_task and
	export_tasks.

	* src/gsad_omp.c (export_task, export_tasks): New functions.

	* src/gsad_omp.h: Add headers accordingly.

2012-11-21  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (task [details]): Rename Task Summary to Task
	Details.  Introduce new style icons.

2012-11-21  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (get_tasks_args): Remove.  Merged into only caller.
	(get_tasks): Add get_task_args body.  Remove commands arg.  Callers all
	now do this themselves.

2012-11-21  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (run_wizard_omp): Run the OMP directly, and use
	next_page.

	* src/html/gsad.xsl (html-gsa-logo): Adjust indicator path accordingly.

2012-11-21  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (save_container_task_omp): Run the OMP directly, and
	use next_page.

2012-11-20  Matthew Mundell <matthew.mundell@greenbone.net>

	Separate get_task handling from get_tasks, and simplify some of the
	tasks page handlers.
